ci: fix apk upload github release

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -183,7 +183,8 @@ jobs:
           draft: false
           prerelease: ${{ inputs.release_type == 'prerelease' || inputs.release_type == '' || inputs.release_type == 'nightly' }}
           make_latest: ${{ inputs.release_type == 'release' }}
-          files: ${{ github.workspace }}/${{ env.APK_PATH }}
+          files: |
+            ${{ github.workspace }}/temp/*
 
   publish-fdroid:
     runs-on: ubuntu-latest
