--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -195,7 +195,7 @@ jobs:
       - name: Dispatch update for fdroid repo
         uses: peter-evans/repository-dispatch@v3
         with:
-          token: ${{ secrets.ANDROID_PAT }}
+          token: ${{ secrets.PAT }}
           repository: zaneschepke/fdroid
           event-type: fdroid-update
 
