fix: tile titles not localized
closes #537

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -110,7 +110,7 @@
             android:name=".service.tile.TunnelControlTile"
             android:exported="true"
             android:icon="@drawable/ic_launcher"
-            android:label="Tunnel control"
+            android:label="@string/tunnel_control"
             android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
             <meta-data
                 android:name="android.service.quicksettings.ACTIVE_TILE"
@@ -127,7 +127,7 @@
             android:name=".service.tile.AutoTunnelControlTile"
             android:exported="true"
             android:icon="@drawable/ic_launcher"
-            android:label="Auto-tunnel"
+            android:label="@string/auto_tunnel"
             android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
             <meta-data
                 android:name="android.service.quicksettings.ACTIVE_TILE"
