--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,18 +1,18 @@
 [versions]
-accompanist = "0.36.0"
-activityCompose = "1.9.3"
+accompanist = "0.37.0"
+activityCompose = "1.10.0"
 amneziawgAndroid = "1.2.4"
 androidx-junit = "1.2.1"
 appcompat = "1.7.0"
 biometricKtx = "1.2.0-alpha05"
 coreKtx = "1.15.0"
-datastorePreferences = "1.1.1"
+datastorePreferences = "1.1.2"
 desugar_jdk_libs = "2.1.4"
 espressoCore = "3.6.1"
-hiltAndroid = "2.54"
+hiltAndroid = "2.55"
 hiltNavigationCompose = "1.2.0"
 junit = "4.13.2"
-kotlinx-serialization-json = "1.7.3"
+kotlinx-serialization-json = "1.8.0"
 lifecycle-runtime-compose = "2.8.7"
 material3 = "1.3.1"
 navigationCompose = "2.8.5"
@@ -20,10 +20,10 @@ pinLockCompose = "1.0.4"
 roomVersion = "2.6.1"
 timber = "5.0.1"
 tunnel = "1.2.1"
-androidGradlePlugin = "8.8.0-rc02"
+androidGradlePlugin = "8.8.0"
 kotlin = "2.1.0"
 ksp = "2.1.0-1.0.29"
-composeBom = "2024.12.01"
+composeBom = "2025.01.00"
 compose = "1.7.6"
 zxingAndroidEmbedded = "4.3.0"
 coreSplashscreen = "1.0.1"
@@ -38,7 +38,6 @@ gradlePlugins-ktlint="12.1.2"
 
 # accompanist
 accompanist-drawablepainter = { module = "com.google.accompanist:accompanist-drawablepainter", version.ref = "accompanist" }
-accompanist-flowlayout = { module = "com.google.accompanist:accompanist-flowlayout", version.ref = "accompanist" }
 accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanist" }
 
 #room
