--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,16 +15,16 @@ junit = "4.13.2"
 kotlinx-serialization-json = "1.8.0"
 lifecycle-runtime-compose = "2.8.7"
 material3 = "1.3.1"
-navigationCompose = "2.8.5"
+navigationCompose = "2.8.7"
 pinLockCompose = "1.0.4"
 roomVersion = "2.6.1"
 timber = "5.0.1"
-tunnel = "1.2.9"
-androidGradlePlugin = "8.8.0"
+tunnel = "1.2.2"
+androidGradlePlugin = "8.8.0-alpha05"
 kotlin = "2.1.0"
 ksp = "2.1.0-1.0.29"
-composeBom = "2025.01.00"
-compose = "1.7.6"
+composeBom = "2025.02.00"
+compose = "1.7.8"
 zxingAndroidEmbedded = "4.3.0"
 coreSplashscreen = "1.0.1"
 gradlePlugins-grgit = "5.3.0"
