--- a/.github/workflows/on-issue.yml
+++ b/.github/workflows/on-issue.yml
@@ -17,4 +17,18 @@ jobs:
             status: ${{ github.event.issue.state }} - #${{ github.event.issue.number }} ${{ github.event.issue.title }}
             https://github.com/zaneschepke/wgtunnel/issues/${{ github.event.issue.number }}'
           curl -s -X POST 'https://api.telegram.org/bot${{ secrets.TELEGRAM_TOKEN }}/sendMessage' \
-          -d "chat_id=${{ secrets.TELEGRAM_TO }}&text=${msg_text}&message_thread_id=${{ secrets.TELEGRAM_TOPIC }}"
+          -d "chat_id=${{ secrets.TELEGRAM_TO }}&text=${msg_text}&message_thread_id=${{ vars.TELEGRAM_ACTIVITY_TOPIC }}"
+
+      -   name: Send Matrix Message
+          run: |
+            msg_text='${{ github.actor }} updated an issue:
+              status: ${{ github.event.issue.state }} - #${{ github.event.issue.number }} ${{ github.event.issue.title }}
+              https://github.com/zaneschepke/wgtunnel/issues/${{ github.event.issue.number }}'
+            curl -s -X POST \
+              -H "Authorization: Bearer ${{ secrets.MATRIX_TOKEN }}" \
+              -H "Content-Type: application/json" \
+              -d '{
+                "msgtype": "m.text",
+                "body": "'"$msg_text"'"
+              }' \
+              "https://matrix.yourserver.com/_matrix/client/v3/rooms/${{ vars.MATRIX_ACTIVITY_TOPIC }}/send/m.room.message/$(date +%s)"
