ci: fix notification workflow on release

--- a/.github/workflows/on-publish.yml
+++ b/.github/workflows/on-publish.yml
@@ -1,8 +1,9 @@
 name: on-publish
 
 on:
-  repository_dispatch:
-    types: [ publish-release ]
+  release:
+    types: [ published ]
+
 
 jobs:
   on-publish:
