--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,7 +20,7 @@ pinLockCompose = "1.0.4"
 roomVersion = "2.7.0"
 timber = "5.0.1"
 tunnel = "1.2.11"
-androidGradlePlugin = "8.8.0-alpha05"
+androidGradlePlugin = "8.9.1"
 kotlin = "2.1.20"
 ksp = "2.1.20-2.0.0"
 composeBom = "2025.04.00"
