--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,6 +34,9 @@ on:
 env:
   UPLOAD_DIR_ANDROID: android_artifacts
 
+permissions:
+  contents: write
+
 jobs:
   check_commits:
     name: Check for New Commits
@@ -90,8 +93,18 @@ jobs:
           tag: "latest"  # or any tag name you wish to use
           message: "Automated tag for HEAD commit"
           force_push_tag: true
-          github_token: ${{ secrets.PAT }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           tag_exists_error: false
+
+      - name: Create Release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: latest
+          release_name: Automated Latest tag
+          draft: false
+          prerelease: false
 
       - name: Get latest release
         id: latest_release
