--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -38,6 +38,7 @@ gradlePlugins-grgit = "5.3.0"
 material = "1.12.0"
 storage = "1.5.0"
 ktfmt = "0.22.0"
+licensee = "1.12.0"
 
 
 [libraries]
@@ -117,4 +118,5 @@ androidLibrary = { id = "com.android.library", version.ref = "androidGradlePlugi
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 grgit = { id = "org.ajoberstar.grgit.service", version.ref = "gradlePlugins-grgit" }
 ktfmt = { id = "com.ncorti.ktfmt.gradle", version.ref = "ktfmt" }
+licensee = { id = "app.cash.licensee", version.ref = "licensee" }
 
