--- a/.gitignore
+++ b/.gitignore
@@ -70,5 +70,5 @@ lint/tmp/
 app/release/output.json
 .idea/codeStyles/
 # where we keep our signing secrets locally
-app/signing.properties
 /.kotlin/
+/app/keystore/
